; ModuleID = '/home/carl/AnghaBench/linux/fs/nfs/extr_nfs42xdr.c_encode_device_error.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nfs/extr_nfs42xdr.c_encode_device_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xdr_stream = type { i32 }
%struct.nfs42_device_error = type { i32, i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@NFS4_DEVICEID4_SIZE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.xdr_stream*, %struct.nfs42_device_error*)* @encode_device_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @encode_device_error(%struct.xdr_stream* %0, %struct.nfs42_device_error* %1) #0 {
  %3 = alloca %struct.xdr_stream*, align 8
  %4 = alloca %struct.nfs42_device_error*, align 8
  %5 = alloca i8**, align 8
  store %struct.xdr_stream* %0, %struct.xdr_stream** %3, align 8
  store %struct.nfs42_device_error* %1, %struct.nfs42_device_error** %4, align 8
  %6 = load %struct.xdr_stream*, %struct.xdr_stream** %3, align 8
  %7 = load i64, i64* @NFS4_DEVICEID4_SIZE, align 8
  %8 = add nsw i64 %7, 8
  %9 = call i8** @reserve_space(%struct.xdr_stream* %6, i64 %8)
  store i8** %9, i8*** %5, align 8
  %10 = load i8**, i8*** %5, align 8
  %11 = load %struct.nfs42_device_error*, %struct.nfs42_device_error** %4, align 8
  %12 = getelementptr inbounds %struct.nfs42_device_error, %struct.nfs42_device_error* %11, i32 0, i32 2
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i64, i64* @NFS4_DEVICEID4_SIZE, align 8
  %16 = call i8** @xdr_encode_opaque_fixed(i8** %10, i32 %14, i64 %15)
  store i8** %16, i8*** %5, align 8
  %17 = load %struct.nfs42_device_error*, %struct.nfs42_device_error** %4, align 8
  %18 = getelementptr inbounds %struct.nfs42_device_error, %struct.nfs42_device_error* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = call i8* @cpu_to_be32(i32 %19)
  %21 = load i8**, i8*** %5, align 8
  %22 = getelementptr inbounds i8*, i8** %21, i32 1
  store i8** %22, i8*** %5, align 8
  store i8* %20, i8** %21, align 8
  %23 = load %struct.nfs42_device_error*, %struct.nfs42_device_error** %4, align 8
  %24 = getelementptr inbounds %struct.nfs42_device_error, %struct.nfs42_device_error* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i8* @cpu_to_be32(i32 %25)
  %27 = load i8**, i8*** %5, align 8
  store i8* %26, i8** %27, align 8
  ret void
}

declare dso_local i8** @reserve_space(%struct.xdr_stream*, i64) #1

declare dso_local i8** @xdr_encode_opaque_fixed(i8**, i32, i64) #1

declare dso_local i8* @cpu_to_be32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
